--- a/app/javascript/styles/vapor/ui-borders.scss
+++ b/app/javascript/styles/vapor/ui-borders.scss
@@ -93,7 +93,8 @@ div.admin-wrapper div.content-wrapper > div.content h2,
 .notification__filter-bar > button.active::after,
 .notification__filter-bar,
 div.account__header div.account__header__bar,
-ul li.dropdown-menu__separator{
+ul li.dropdown-menu__separator,
+.admin-wrapper .sidebar li a {
   border-bottom-color: $vapor-highlight;
 }
 
